# app/adapter/http/controller/like_like_id_controller.go
@@ -1,0 +1,90 @@
+package controller
+
+import (
+	"log"
+	"net/http"
+	"strconv"
+
+	"github.com/gorilla/mux"
+
+	"github.com/gold-kou/ToeBeans/app/lib"
+
+	"github.com/gold-kou/ToeBeans/app/adapter/http/helper"
+	applicationLog "github.com/gold-kou/ToeBeans/app/adapter/http/log"
+	"github.com/gold-kou/ToeBeans/app/adapter/mysql"
+	"github.com/gold-kou/ToeBeans/app/application/usecase"
+	"github.com/gold-kou/ToeBeans/app/domain/repository"
+)
+
+func LikeLikeIDController(w http.ResponseWriter, r *http.Request) {
+	l, err := applicationLog.NewLogger()
+	if err != nil {
+		log.Panic(err)
+	}
+	l.LogHTTPAccess(r)
+
+	switch r.Method {
+	case http.MethodDelete:
+		err = deleteLike(r)
+		switch err := err.(type) {
+		case nil:
+			helper.ResponseSimpleSuccess(w)
+		case *helper.BadRequestError:
+			helper.ResponseBadRequest(w, err.Error())
+		case *helper.AuthorizationError:
+			helper.ResponseUnauthorized(w, err.Error())
+		case *helper.InternalServerError:
+			helper.ResponseInternalServerError(w, err.Error())
+		default:
+			helper.ResponseInternalServerError(w, err.Error())
+		}
+	default:
+		helper.ResponseBadRequest(w, "not allowed method")
+	}
+}
+
+func deleteLike(r *http.Request) error {
+	// authorization
+	userName, err := lib.VerifyHeaderToken(r)
+	if err != nil {
+		log.Println(err)
+		return helper.NewAuthorizationError(err.Error())
+	}
+
+	// get request parameter
+	vars := mux.Vars(r)
+	likeID, ok := vars["like_id"]
+	if !ok {
+		log.Println(err)
+		return helper.NewBadRequestError("parameter like_id is required")
+	}
+	id, err := strconv.Atoi(likeID)
+	if err != nil {
+		return helper.NewInternalServerError(err.Error())
+	}
+
+	// db connect
+	db, err := mysql.NewDB()
+	if err != nil {
+		log.Println(err)
+		return helper.NewInternalServerError(err.Error())
+	}
+	defer db.Close()
+	tx := mysql.NewDBTransaction(db)
+
+	// repository
+	userRepo := repository.NewUserRepository(db)
+	postingRepo := repository.NewPostingRepository(db)
+	likeRepo := repository.NewLikeRepository(db)
+
+	// UseCase
+	u := usecase.NewDeleteLike(r.Context(), tx, userName, int64(id), userRepo, postingRepo, likeRepo)
+	if err = u.DeleteLikeUseCase(); err != nil {
+		log.Println(err)
+		if err == repository.ErrNotExistsData {
+			return helper.NewBadRequestError(err.Error())
+		}
+		return helper.NewInternalServerError(err.Error())
+	}
+	return err
+}
